--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite build --watch"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.6.0",
+        "laravel-vite-plugin": "^0.6.1",
         "lodash": "^4.17.19",
         "postcss": "^8.4.19",
         "tailwindcss": "^3.2.4",
-        "vite": "^3.0.0"
+        "vite": "^3.2.5"
     },
     "dependencies": {
         "dropzone": "^6.0.0-beta.2"
